--- a/src/components/today/Today.css
+++ b/src/components/today/Today.css
@@ -1,7 +1,7 @@
 .plant--container{
     display: flex;
     flex-direction: column;
-    margin: 2% 6%;
+    margin: 3% 6%;
 }
 
 .todayList {
